[WebKit2][iOS] PDF https://bugs.webkit.org/show_bug.cgi?id=129600 <rdar://problem/15260216>

Reviewed by Anders Carlsson.

Add a single custom content provider which installs a very primitive PDF view
in place of the WKContentView if a PDF is loaded in the main frame.

* Configurations/WebKit2.xcconfig:
Link against CorePDF, for UIPDFPageView.

* UIProcess/Cocoa/WKWebViewContentProviderRegistry.mm:
(-[WKWebViewContentProviderRegistry init]):
Initialize the registry, using WKPDFView for all PDF MIME types.

* WebKit2.xcodeproj/project.pbxproj:
* UIProcess/ios/WKPDFView.h: Added.
* UIProcess/ios/WKPDFView.mm: Added.
Add a very simple PDF view based on UIPDFPageView. Additional functionality
can come in the future; right now, we just create one view for each page, and
depend on CATiledLayer to only paint the pages that are being displayed.

* WebCore.exp.in:
* platform/MIMETypeRegistry.cpp:
(WebCore::initializeSupportedImageMIMETypes):
(WebCore::initializePDFMIMETypes):
(WebCore::initializePostScriptMIMETypes):
(WebCore::initializeMIMETypeRegistry):
(WebCore::MIMETypeRegistry::getPDFMIMETypes):
* platform/MIMETypeRegistry.h:
Split PDF and PostScript MIME types, so WebKit2 can retrieve just the PDF ones
without PostScript included.


Canonical link: https://commits.webkit.org/147953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165327 268f45cc-cd09-0410-ab3c-d52691b4dbfc